# i73

./: .gitignore  .project  Cargo.toml  Cave Generation  ClimatesJava  ClimatesRust  DungeonItemsJava  GoodGameJava  GoodGameRust  I73 Biome Generation  I73 Decoration List - Overworld and Sky  I73 Noise Generation  PerlinBulkJava  PerlinBulkRust  PerlinJava  PerlinRust  README.md  Simplex100Java  SimplexOctavesJava  SimplexOctavesRust  build.rs
config/: biomes_debug.json
profiles/b173/: biomes.json  climate.json  customized_.json
profiles/b173_debug_biomes/: customized.json
src/: biome.rs  block.rs  climate.rs  distribution.rs  lib.rs  main.rs  matcher.rs  rng.rs  sample.rs  segmented.rs  surface.rs  totuple.rs  trig.rs
src/biome/: climate.rs  mod.rs  source.rs  storage.rs
src/chunk/: anvil.rs  grouping.rs  matcher.rs  mod.rs  position.rs  region.rs  storage.rs  world.rs
src/config/: biomes.rs  mod.rs
src/config/settings/: customized.rs  flat.rs  mod.rs
src/decorator/: dungeon.rs  exposed.rs  lake.rs  large_tree.rs  liquid_pocket.rs  mod.rs  scatter.rs  tree.rs  vein.rs
src/decorator/clump/: cactus.rs  mod.rs  plant.rs  reed.rs  sugar_cane.rs
src/distribution/: height.rs  mod.rs  rarity.rs
src/dynamics/: light.rs  mod.rs  queue.rs
src/generator/: flat.rs  mod.rs  nether_173.rs  overworld_173.rs  region.rs  sky_173.rs
src/image_ops/: blur.rs  filter.rs  i80.rs  mod.rs  zoom.rs
src/noise/: mod.rs  octaves.rs  perlin.rs  simplex.rs
src/noise_field/: height.rs  mod.rs  volume.rs
src/structure/: caves.rs  mod.rs
test_data/: JavaSinTable.txt
(+6 files in other folders)
